--- a/index.template.html
+++ b/index.template.html
@@ -9,8 +9,8 @@
       gtag('js', new Date());
       gtag('config', 'UA-109158672-1');
     </script>
-  <link href="main.css" rel="stylesheet"></head>
+  </head>
   <body>
     <div id="app"></div>
-  <script type="text/javascript" src="app.js"></script></body>
+  </body>
 </html>
